--- a/.env.example
+++ b/.env.example
@@ -31,8 +31,8 @@ MONGODB_CONN_PARAMS=mongodb_conn_params
 JWT_AUTH_SCHEMA=jwt_scheme
 JWT_ACCESSTOKEN_SECRET=jwt_secret
 JWT_REFRESHTOKEN_SECRET=jwt_secret
-JWT_ISSUER=https://api.tonightpass.com
-JWT_AUDIENCE=https://tonightpass.com
+JWT_ISSUER=jwt_issuer
+JWT_AUDIENCE=jwt_audience
 JWT_ACCESSTOKEN_EXPIRESIN=jwt_expiresin
 JWT_REFRESHTOKEN_EXPIRESIN=jwt_expiresin
 
